--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.fortify.client.api.samples</groupId>
 	<artifactId>client-api-samples</artifactId>
-	<version>5.0-SNAPSHOT</version>
+	<version>5.0</version>
 	
 	<organization>
 		<name>Micro Focus Fortify</name>
@@ -48,7 +48,7 @@
 	</developers>
 	<scm>
 		<developerConnection>scm:git:https://github.com/fortify-ps/fortify-client-api-samples.git</developerConnection>
-		<tag>master</tag>
+		<tag>5.0</tag>
 	</scm>
 	<inceptionYear>2016</inceptionYear>
 	<properties>
