--- a/pom.xml
+++ b/pom.xml
@@ -57,8 +57,8 @@
 	</properties>
 	<repositories>
 		<repository>
-			<id>FortifyMavenRepo</id>
-			<url>https://raw.githubusercontent.com/fortify-ps/FortifyMavenRepo/master</url>
+			<id>FortifyPSMavenRepo</id>
+			<url>https://dl.bintray.com/fortify-ps/maven</url>
 			<snapshots>
 				<enabled>true</enabled>
 				<updatePolicy>always</updatePolicy>
